test/scc_test/stmt/semantic-errors/003.t
void test()
{
    while (1)
        case 1:
            ;
}